k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xnat
  labels:
    app.kubernetes.io/name: xnat
    app.kubernetes.io/component: namespace
